--- a/docs/design-document/Final_Project_Team_3_Deliverable_1.tex
+++ b/docs/design-document/Final_Project_Team_3_Deliverable_1.tex
@@ -416,7 +416,9 @@ To capture non-linear relationships, we introduced polynomial features:
 
 \subsection{Model Training and Evaluation}
 
-The modeling phase involved training two distinct models: Logistic Regression and AutoGluon's \texttt{TabularPredictor}. Both models were evaluated to determine their effectiveness.
+The modeling phase involved training two distinct models: Logistic Regression and AutoGluon's \texttt{TabularPredictor}.
+
+Both models were evaluated to determine their effectiveness.
 
 \subsubsection{Models Implemented}
 
