--- a/docs/design-document/Final_Project_Team_3_Deliverable_1.tex
+++ b/docs/design-document/Final_Project_Team_3_Deliverable_1.tex
@@ -657,7 +657,7 @@ The CI/CD pipeline, defined in \texttt{.github/workflows/mlops-pipeline.yml}, au
         \end{itemize}
     \item \textbf{Pipeline Execution}:
         \begin{itemize}[leftmargin=*]
-            \item Runs DVC pipeline stages defined in \texttt{dvc-opensource.yaml} using \texttt{dvc exp run --run-all}.
+            \item Runs DVC pipeline stages defined in \texttt{dvc.yaml} using \texttt{dvc exp run --run-all}.
             \item Captures outputs, metrics, and artifacts.
         \end{itemize}
     \item \textbf{Artifacts Management}:
