--- a/notebooks/openai-text-to-speech.ipynb
+++ b/notebooks/openai-text-to-speech.ipynb
@@ -1,26 +1,10 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "colab": {
-   "provenance": [],
-   "authorship_tag": "ABX9TyORQHfFrdk42IYwVCj3qbIf",
-   "include_colab_link": true
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  },
-  "language_info": {
-   "name": "python"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "view-in-github",
-    "colab_type": "text"
+    "colab_type": "text",
+    "id": "view-in-github"
    },
    "source": [
     "<a href=\"https://colab.research.google.com/github/aai540-group3/project/blob/main/notebooks/openai-text-to-speech.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -168,7 +152,6 @@
     "                    )\n",
     "\n",
     "                with gr.Group():\n",
-    "\n",
     "                    preview_audio = gr.Audio(\n",
     "                        interactive=False,\n",
     "                        label=\"Preview Voice: Echo\",\n",
@@ -343,5 +326,21 @@
     "    main()"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyORQHfFrdk42IYwVCj3qbIf",
+   "include_colab_link": true,
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
