--- a/docs/design-document/references.bib
+++ b/docs/design-document/references.bib
@@ -13,11 +13,11 @@
 }
 
 @misc{diabetes_130-us_hospitals_for_years_1999-2008_296,
-  author       = {Clore, John, Cios, Krzysztof, DeShazo, Jon, and Strack, Beata},
+  author       = {Clore, John and Cios, Krzysztof and DeShazo, Jon and Strack, Beata},
   howpublished = {UCI Machine Learning Repository},
-  note         = {{DOI}: https://doi.org/10.24432/C5230J},
-  title        = {{Diabetes 130-US Hospitals for Years 1999-2008}},
-  year         = {2014},
+  note         = {DOI: https://doi.org/10.24432/C5230J},
+  title        = {Diabetes 130-US Hospitals for Years 1999-2008},
+  year         = {2014}
 }
 
 @misc{DVC,
@@ -32,18 +32,4 @@
   howpublished = {Online},
   title        = {{Health Insurance Portability and Accountability Act (HIPAA)}},
   url          = {https://www.hhs.gov/hipaa/index.html},
-}
-
-@misc{Terraform,
-  author       = {{HashiCorp}},
-  howpublished = {Online},
-  title        = {{Terraform}},
-  url          = {https://www.terraform.io/},
-}
-
-@misc{UCI_Diabetes,
-  author       = {{UCI Machine Learning Repository}},
-  howpublished = {Online},
-  title        = {{Diabetes 130-US hospitals for years 1999-2008 Data Set}},
-  url          = {https://archive.ics.uci.edu/dataset/296/diabetes+130-us+hospitals+for+years+1999-2008},
 }
